# UnifiedLLM

./: .dockerignore  .env.example  .gitignore  DOCKER_IMAGES.md  Dockerfile  GITHUB_SETUP.md  PROVIDER_DIALOG_TEST_CHECKLIST.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  validate_setup.py
.github/workflows/: docker-publish.yml
.kiro/specs/llm-provider-manager/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  main.py
app/api/: config.py  gptload.py  models.py  providers.py
app/database/: database.py  migrations.py
app/models/: __init__.py  gptload_group.py  model.py  provider.py  sync_record.py
app/services/: __init__.py  config_generator.py  encryption_service.py  gptload_client.py  model_service.py  provider_service.py  provider_splitter.py  sync_service.py
app/static/: app.js  index.html  styles.css
app/static/css/: base.css  layout.css  main.css  responsive.css  utilities.css  variables.css
app/static/css/components/: alerts.css  buttons.css  cards.css  forms.css  modals.css  tables.css
referrence/: GPT-Load_API_Manual.md  Uni-API_Configuration_Guide.md
tests/: test_config_generator.py  test_encryption_service.py  test_gptload_client.py  test_gptload_status.py  test_model_service.py  test_models.py  test_normalized_names_api.py  test_provider_dialog_manual.py  test_provider_dialog_ui.py  test_provider_service.py  test_provider_splitter.py  test_setup.py  test_startup_validation.py  test_sync_service.py  test_sync_service_integration.py
(+6 files in other folders)
